Adds notebook for generic image classification (#364)
* Adds image classification notebook for user datasets

* Adds Image Classification transfer learning notebook

* Fixed links and text

* Minor doc updates

* Updated for review feedback

* Moved training-specific vars to TL section

* Newline and license header

--- a/docs/notebooks/transfer_learning/tf_image_classification/Image_Classification_Transfer_Learning.ipynb
+++ b/docs/notebooks/transfer_learning/tf_image_classification/Image_Classification_Transfer_Learning.ipynb
@@ -4,27 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transfer Learning for Food-101 Image Classification\n",
+    "# Transfer Learning for Image Classification\n",
     "\n",
-    "This notebook uses a classifier model that was originally trained using [ImageNet](https://image-net.org) and does transfer learning with the [Food-101 dataset](https://data.vision.ee.ethz.ch/cvl/datasets_extra/food-101/). The Food-101 dataset has 101,000 images of food in 101 categories.\n",
-    "\n",
+    "This notebook uses a classifier model that was originally trained using [ImageNet](https://image-net.org) and does transfer learning with either a TF dataset or your own raw images.\n",
     "The notebook performs the following steps:\n",
     "1. [Install dependencies and setup parameters](#1.-Install-dependencies-and-setup-parameters)\n",
-    "2. [Prepare the dataset](#2.-Prepare-the-dataset)\n",
+    "2. [Prepare the dataset](#2.-Prepare-the-dataset) using either a TF dataset or your own images\n",
     "3. [Predict using the original model](#3.-Predict-using-the-original-model)\n",
     "4. [Transfer learning](#4.-Transfer-Learning)\n",
     "5. [Evaluate the model](#5.-Evaluate-the-model)\n",
-    "6. [Export the saved model](#6.-Export-the-saved-model)\n",
-    "\n",
-    "Dataset citation:\n",
-    "```\n",
-    "@inproceedings{bossard14,\n",
-    "  title = {Food-101 -- Mining Discriminative Components with Random Forests},\n",
-    "  author = {Bossard, Lukas and Guillaumin, Matthieu and Van Gool, Luc},\n",
-    "  booktitle = {European Conference on Computer Vision},\n",
-    "  year = {2014}\n",
-    "}\n",
-    "```"
+    "6. [Export the saved model](#6.-Export-the-saved-model)"
    ]
   },
   {
@@ -43,6 +32,7 @@
     "!pip install ipywidgets==7.6.5 \\\n",
     "             tensorflow_hub==0.12.0 \\\n",
     "             tensorflow-datasets==4.4.0 \\\n",
+    "             scipy \\\n",
     "             'pandas>=1.1.5' \\\n",
     "             'matplotlib>=3.3.4'"
    ]
@@ -62,31 +52,21 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "# Specify a model from the tfhub_model_map dictionary\n",
-    "model_name = \"efficientnet_b0\"\n",
+    "from model_util import tfhub_model_map\n",
     "\n",
-    "# Specify the location for the dataset to be downloaded\n",
+    "print('Supported models:')\n",
+    "print('\\n'.join(tfhub_model_map.keys()))\n",
+    "\n",
+    "# Specify the the parent directory for the custom or tf dataset\n",
     "dataset_directory = os.environ[\"DATASET_DIR\"] if \"DATASET_DIR\" in os.environ else \\\n",
-    "    os.path.join(os.environ[\"HOME\"], \"food101_dataset\")\n",
+    "    os.path.join(os.environ[\"HOME\"], \"dataset\")\n",
     "    \n",
     "# Specify a directory for output\n",
     "output_directory = os.environ[\"OUTPUT_DIR\"] if \"OUTPUT_DIR\" in os.environ else \\\n",
-    "    os.path.join(os.environ[\"HOME\"], \"food101_output\")\n",
+    "    os.path.join(os.environ[\"HOME\"], \"output\")\n",
     "\n",
     "# Batch size\n",
-    "batch_size = 32\n",
-    "\n",
-    "# Number of training epochs\n",
-    "training_epochs = 1\n",
-    "\n",
-    "# To reduce training time, the feature extractor layer can remain frozen (do_fine_tuning=False).\n",
-    "# Fine-tuning can be enabled to potentially get better accuracy. Note that enabling fine-tuning\n",
-    "# will increase training time.\n",
-    "do_fine_tuning = False\n",
-    "\n",
-    "# Optionally add a dropout layer (set to a float between 0 and 1, or None).\n",
-    "# If set to None, no dropout layer will be added.\n",
-    "dropout_layer_rate = None"
+    "batch_size = 32"
    ]
   },
   {
@@ -95,59 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dictionary of TFHub models\n",
-    "tfhub_model_map = {\n",
-    "    \"resnet_v1_50\": {\n",
-    "        \"imagenet_model\": \"https://tfhub.dev/google/imagenet/resnet_v1_50/classification/5\",\n",
-    "        \"feature_vector\": \"https://tfhub.dev/google/imagenet/resnet_v1_50/feature_vector/5\",\n",
-    "        \"image_size\": 224\n",
-    "    },\n",
-    "    \"resnet_v2_50\": {\n",
-    "        \"imagenet_model\": \"https://tfhub.dev/google/imagenet/resnet_v2_50/classification/5\",\n",
-    "        \"feature_vector\": \"https://tfhub.dev/google/imagenet/resnet_v2_50/feature_vector/5\",\n",
-    "        \"image_size\": 224\n",
-    "    },\n",
-    "    \"resnet_v2_101\": {\n",
-    "        \"imagenet_model\": \"https://tfhub.dev/google/imagenet/resnet_v2_101/classification/5\",\n",
-    "        \"feature_vector\": \"https://tfhub.dev/google/imagenet/resnet_v2_101/feature_vector/5\",\n",
-    "        \"image_size\": 224\n",
-    "    },\n",
-    "    \"mobilenet_v2_100_224\": {\n",
-    "        \"imagenet_model\": \"https://tfhub.dev/google/imagenet/mobilenet_v2_100_224/classification/5\",\n",
-    "        \"feature_vector\": \"https://tfhub.dev/google/imagenet/mobilenet_v2_100_224/feature_vector/4\",\n",
-    "        \"image_size\": 224\n",
-    "    },\n",
-    "    \"efficientnetv2-s\": {\n",
-    "        \"imagenet_model\": \"https://tfhub.dev/google/imagenet/efficientnet_v2_imagenet1k_s/classification/2\",\n",
-    "        \"feature_vector\": \"https://tfhub.dev/google/imagenet/efficientnet_v2_imagenet1k_s/feature_vector/2\",\n",
-    "        \"image_size\": 384\n",
-    "    },\n",
-    "    \"efficientnet_b0\": {\n",
-    "        \"imagenet_model\": \"https://tfhub.dev/google/efficientnet/b0/classification/1\",\n",
-    "        \"feature_vector\": \"https://tfhub.dev/google/efficientnet/b0/feature-vector/1\",\n",
-    "        \"image_size\": 224\n",
-    "    },\n",
-    "    \"efficientnet_b1\": {\n",
-    "        \"imagenet_model\": \"https://tfhub.dev/google/efficientnet/b1/classification/1\",\n",
-    "        \"feature_vector\": \"https://tfhub.dev/google/efficientnet/b1/feature-vector/1\",\n",
-    "        \"image_size\": 240\n",
-    "    },\n",
-    "    \"efficientnet_b2\": {\n",
-    "        \"imagenet_model\": \"https://tfhub.dev/google/efficientnet/b2/classification/1\",\n",
-    "        \"feature_vector\": \"https://tfhub.dev/google/efficientnet/b2/feature-vector/1\",\n",
-    "        \"image_size\": 260\n",
-    "    },\n",
-    "    \"inception_v3\": {\n",
-    "        \"imagenet_model\": \"https://tfhub.dev/google/imagenet/inception_v3/classification/5\",\n",
-    "        \"feature_vector\": \"https://tfhub.dev/google/imagenet/inception_v3/feature_vector/5\",\n",
-    "        \"image_size\": 299\n",
-    "    },\n",
-    "    \"nasnet_large\": {\n",
-    "        \"imagenet_model\": \"https://tfhub.dev/google/imagenet/nasnet_large/classification/5\",\n",
-    "        \"feature_vector\": \"https://tfhub.dev/google/imagenet/nasnet_large/feature_vector/5\",\n",
-    "        \"image_size\": 331\n",
-    "    }\n",
-    "}\n",
+    "# Specify a model from the list above\n",
+    "model_name = \"efficientnet_b0\"\n",
     "\n",
     "if model_name not in tfhub_model_map.keys():\n",
     "    raise ValueError(\"The specified model_name ({}) is invalid. Please select from: {}\".\n",
@@ -168,9 +97,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Prepare the dataset\n",
-    "\n",
-    "Load the [Food-101 dataset using the TensorFlow datasets API](https://www.tensorflow.org/datasets/catalog/food101), and then preprocess the images to convert them to float32 and resize the images. The data is split into a `train` and `test` set to use for training and validation. If the dataset is not found in the dataset directory it is downloaded. Subsequent runs will reuse the already downloaded dataset."
+    "## 2. Prepare the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Option A: Use a TF dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To use a TF Dataset, load from the tensorflow_datasets library, preprocess the images to convert them to float32, and resize the images. This example uses the [Food-101 dataset using the TensorFlow datasets API](https://www.tensorflow.org/datasets/catalog/food101) dataset, but you can choose from a wide variety of [options](https://www.tensorflow.org/datasets/catalog/overview) (click on the \"Image classification\" section). If the dataset is not found in the dataset directory it is downloaded. Subsequent runs will reuse the already downloaded dataset."
    ]
   },
   {
@@ -179,13 +120,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the 'food101' dataset using the TensorFlow datasets API\n",
-    "[train_ds, test_ds], info = tfds.load(\"food101\",\n",
-    "                           data_dir=dataset_directory,\n",
-    "                           split=[\"train\", \"validation\"],\n",
-    "                           as_supervised=True,\n",
-    "                           shuffle_files=True,\n",
-    "                           with_info=True)\n",
+    "# Options include: \"food101\", cats_vs_dogs\", \"horses_or_humans\", \"rock_paper_scissors\", and \"tf_flowers\"\n",
+    "tf_dataset = \"food101\"\n",
+    "\n",
+    "# Load the dataset using the TensorFlow datasets API\n",
+    "[train_ds, test_ds], info = tfds.load(tf_dataset,\n",
+    "                       data_dir=dataset_directory,\n",
+    "                       split=[\"train[:75%]\", \"train[:25%]\"],\n",
+    "                       as_supervised=True,\n",
+    "                       shuffle_files=True,\n",
+    "                       with_info=True)\n",
     "\n",
     "# Preprocess the images to convert them to float32 and resize the images to match our model\n",
     "def preprocess_image(image, label):\n",
@@ -215,6 +159,97 @@
     "\n",
     "# Get class names for the dataset\n",
     "class_names = info.features[\"label\"].names\n",
+    "print(\"Number of classes:\", len(class_names))\n",
+    "print('After processing and batching: ', train_ds.element_spec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Skip to the next step [3. Predict using the original model](#3.-Predict-using-the-original-model) to continue using the TF Dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Option B: Use your own image dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To use your own image dataset for transfer learning with the rest of this notebook, format your images as `.jpg` files and save them in folders named after the classes that you want the model to predict. To provide a working example using the correct layout, we will download and extract a flower species dataset. This is different from using the TF dataset called `tf_flowers`, although they are the same images, because the download contains image files, not tf_records, and we are not using the TF datasets API. After downloading and extracting, you will have the following  subdirectories in your dataset directory. Each species subfolder will contain numerous `.jpg` files:\n",
+    "\n",
+    "```\n",
+    "dataset_directory\n",
+    "└── flower_photos\n",
+    "    └── daisy\n",
+    "    └── dandelion\n",
+    "    └── roses\n",
+    "    └── sunflowers\n",
+    "    └── tulips\n",
+    "```\n",
+    "\n",
+    "Use this as an example to organize your own image files accordingly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# When you have your own properly organized subdirectory of images, adjust this variable\n",
+    "dataset_subdir = os.path.join(dataset_directory, \"flower_photos\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Only run this if you want to use the example flowers dataset\n",
+    "if not os.path.exists(dataset_subdir):\n",
+    "    os.mkdir(dataset_subdir)\n",
+    "    !apt-get update && apt-get -qq install curl\n",
+    "    !curl https://storage.googleapis.com/download.tensorflow.org/example_images/flower_photos.tgz -o flower_photos.tgz\n",
+    "    !tar xvf flower_photos.tgz --directory $dataset_directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pathlib\n",
+    "data_subdir_path = pathlib.Path(dataset_subdir)\n",
+    "image_count = len(list(data_subdir_path.glob('*/*.jpg')))\n",
+    "print('Images:', image_count)\n",
+    "print('Image Size:', image_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an image data generator and partition the data into train and test sets\n",
+    "img_gen = tf.keras.preprocessing.image.ImageDataGenerator(rescale=1./255, validation_split=0.25)\n",
+    "train_ds = img_gen.flow_from_directory(data_subdir_path, batch_size=batch_size, \n",
+    "                                   target_size=(image_size, image_size),\n",
+    "                                   class_mode='sparse', subset='training')\n",
+    "test_ds = img_gen.flow_from_directory(data_subdir_path, batch_size=batch_size, \n",
+    "                                  target_size=(image_size, image_size),\n",
+    "                                  class_mode='sparse', subset='validation')\n",
+    "\n",
+    "# Get class names for the dataset\n",
+    "class_names = [k for k in train_ds.class_indices.keys()]\n",
     "print(\"Number of classes:\", len(class_names))"
    ]
   },
@@ -224,7 +259,7 @@
    "source": [
     "## 3. Predict using the original model\n",
     "\n",
-    "Use the classifier model that was trained using ImageNet to do predictions with the food dataset and view the results for a single batch. Table below compares the prediction made by the ImageNet trained model with the actual label from the Food-101 dataset."
+    "Use the classifier model that was trained using ImageNet to do predictions with the dataset and view the results for a single batch. Table below compares the prediction made by the ImageNet trained model with the actual label from the dataset."
    ]
   },
   {
@@ -238,7 +273,7 @@
     "image_batch, label_batch = batch\n",
     "\n",
     "# List of the actual labels for this batch\n",
-    "actual_label_batch = [class_names[id] for id in label_batch]\n",
+    "actual_label_batch = [class_names[int(id)] for id in label_batch]\n",
     "\n",
     "# Download the ImageNet labels and load them into a list\n",
     "labels_file = \"https://storage.googleapis.com/download.tensorflow.org/data/ImageNetLabels.txt\"\n",
@@ -257,12 +292,12 @@
     "predicted_id = np.argmax(predicted_batch, axis=-1)\n",
     "predicted_label_batch = [imagenet_classes[id] for id in predicted_id]\n",
     "\n",
-    "# Create a results table to list out the ImageNet class prediction vs the actual Food-101 dataset label\n",
+    "# Create a results table to list out the ImageNet class prediction vs the actual dataset label\n",
     "results_table = []\n",
     "for prediction, actual in zip(predicted_label_batch, actual_label_batch):\n",
     "    results_table.append([prediction, actual])\n",
     "\n",
-    "pd.DataFrame(results_table, columns=[\"ImageNet Prediction\", \"Actual Food-101 label\"])"
+    "pd.DataFrame(results_table, columns=[\"ImageNet Prediction\", \"Actual Label\"])"
    ]
   },
   {
@@ -288,7 +323,26 @@
    "source": [
     "## 4. Transfer Learning\n",
     "\n",
-    "Get the feature vector from TF Hub and add on a dense layer based on the number of classes in our dataset. Train the model using the Food-101 training dataset for the specified number of epochs."
+    "Get the feature vector from TF Hub and add on a dense layer based on the number of classes in our dataset. Train the model using the training dataset for the specified number of epochs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Number of training epochs\n",
+    "training_epochs = 1\n",
+    "\n",
+    "# To reduce training time, the feature extractor layer can remain frozen (do_fine_tuning=False).\n",
+    "# Fine-tuning can be enabled to potentially get better accuracy. Note that enabling fine-tuning\n",
+    "# will increase training time.\n",
+    "do_fine_tuning = False\n",
+    "\n",
+    "# Optionally add a dropout layer (set to a float between 0 and 1, or None).\n",
+    "# If set to None, no dropout layer will be added.\n",
+    "dropout_layer_rate = None"
    ]
   },
   {
@@ -300,7 +354,6 @@
     "feature_extractor_layer = hub.KerasLayer(feature_vector_handle,\n",
     "                                         input_shape=(image_size, image_size, 3),\n",
     "                                         trainable=do_fine_tuning)\n",
-    "feature_batch = feature_extractor_layer(image_batch)\n",
     "\n",
     "if dropout_layer_rate == None:\n",
     "    model = tf.keras.Sequential([\n",
@@ -395,7 +448,7 @@
     "_ = plt.suptitle(\"Model predictions\")\n",
     "plt.show()\n",
     "print(\"Correct predictions are shown in green\")\n",
-    "print(\"Incorrect predictions are shown in red with the actual Food-101 label in parenthesis\")"
+    "print(\"Incorrect predictions are shown in red with the actual label in parenthesis\")"
    ]
   },
   {
@@ -414,11 +467,40 @@
     "saved_model_dir = os.path.join(output_directory, \"{}_saved_model\".format(model_name))\n",
     "model.save(saved_model_dir)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset citations\n",
+    "```\n",
+    "@inproceedings{bossard14,\n",
+    "  title = {Food-101 -- Mining Discriminative Components with Random Forests},\n",
+    "  author = {Bossard, Lukas and Guillaumin, Matthieu and Van Gool, Luc},\n",
+    "  booktitle = {European Conference on Computer Vision},\n",
+    "  year = {2014}\n",
+    "}\n",
+    "\n",
+    "@ONLINE {tfflowers,\n",
+    "author = \"The TensorFlow Team\",\n",
+    "title = \"Flowers\",\n",
+    "month = \"jan\",\n",
+    "year = \"2019\",\n",
+    "url = \"http://download.tensorflow.org/example_images/flower_photos.tgz\" }\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -432,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
