fix: corrected spelling mistakes in multiple files

--- a/docs/notebooks/perf_analysis/benchmark_data_types_perf_comparison.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_data_types_perf_comparison.ipynb
@@ -644,7 +644,7 @@
     "    config.data_location = data_download_path\n",
     "\n",
     "if accuracy_only == True and config.data_location == '':\n",
-    "    print(\"ERROR! STOP! need data for accuacy evaluatoin!\")  \n",
+    "    print(\"ERROR! STOP! need data for accuracy evaluatoin!\")  \n",
     "\n",
     "if config.preprocessing != '':\n",
     "    config.write_value_from_section(topology_name, 'model-source-dir', model_source_dir)    \n"
