TL LLM Notebook Update (#2133)

--- a/docs/notebooks/transfer_learning/text_generation/pytorch_text_generation/PyTorch_LLM_Instruction_Tuning.ipynb
+++ b/docs/notebooks/transfer_learning/text_generation/pytorch_text_generation/PyTorch_LLM_Instruction_Tuning.ipynb
@@ -20,8 +20,7 @@
     "    \n",
     "3. [Prepare the model and test domain knowledge](#3.-Prepare-the-model-and-test-domain-knowledge)\n",
     "4. [Transfer learning](#4.-Transfer-learning)\n",
-    "5. [Retest domain knowledge](#5.-Retest-domain-knowledge)\n",
-    "6. [Quantize the model](#6.-Quantize-the-model)"
+    "5. [Retest domain knowledge](#5.-Retest-domain-knowledge)"
    ]
   },
   {
@@ -763,193 +762,6 @@
     "    \n",
     "retest_output = tokenizer.batch_decode(output)\n",
     "print(retest_output[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bf79ca2e",
-   "metadata": {},
-   "source": [
-    "## 6. Quantize the model\n",
-    "\n",
-    "If your model is not converted to bfloat16 precision and optimized by IPEX, quantizing it with Intel® Neural Compressor can result in faster inference times with little or no loss in accuracy. The purpose of this experimental section is to help you explore quantization recipes such as [SmoothQuant](https://github.com/intel/neural-compressor/blob/v2.1.1/docs/source/smooth_quant.md) for large language models. As Intel Neural Compressor adds more support for peft models with low-rank adaptation, we will expand this section.\n",
-    "\n",
-    "Import a data loader class that has a format compatible with Intel Neural Compressor."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12ca5f9b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llm_utils import INCDataloader\n",
-    "\n",
-    "calib_dataloader = INCDataloader(train_dataset, tokenizer, batch_size=8, max_seq_length=max_seq_length,\n",
-    "                                 for_calib=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "93fc58e2",
-   "metadata": {},
-   "source": [
-    "Next use the Intel Neural Compressor to benchmark the full precision model to see how it performs, as a baseline.\n",
-    "\n",
-    "> Note that there is a known issue when running Intel Neural Compressor from a notebook that you may sometimes see the error \n",
-    "> `zmq.error.ZMQError: Address already in use`. If you see this error, rerun the cell again."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bcd57798",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from neural_compressor.config import BenchmarkConfig\n",
-    "from neural_compressor.benchmark import fit\n",
-    "\n",
-    "backend = 'ipex' if use_ipex else 'default'\n",
-    "config = BenchmarkConfig(backend=backend, warmup=50, iteration=500)\n",
-    "\n",
-    "results = fit(model=model, config=config, b_dataloader=calib_dataloader)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "201d07a2",
-   "metadata": {},
-   "source": [
-    "Use the Intel Neural Compressor to quantize the model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f915701",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kl = False # Whether to use kl divergence for calibration\n",
-    "fallback_add = True # Whether to add fp32 fallback option, recommended for gpt-j"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f33bec92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from neural_compressor import quantization\n",
-    "from neural_compressor.config import PostTrainingQuantConfig\n",
-    "\n",
-    "recipes = {\n",
-    "    \"smooth_quant\": True,\n",
-    "    \"smooth_quant_args\": {\n",
-    "        \"alpha\": 0.5,\n",
-    "        \"folding\": True,\n",
-    "    },\n",
-    "}\n",
-    "\n",
-    "op_type_dict = {}\n",
-    "if kl:\n",
-    "    op_type_dict = {'linear': {'activation': {'algorithm': ['kl']}}}\n",
-    "if fallback_add:\n",
-    "    op_type_dict['add'] = {\"weight\": {\"dtype\": [\"fp32\"]}, \"activation\": {\"dtype\": [\"fp32\"]}}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60d96549",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = PostTrainingQuantConfig(quant_level=1, backend=backend, excluded_precisions=[\"bf16\"],\n",
-    "                                 recipes=recipes, op_type_dict=op_type_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a451b95a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "quantized_model = quantization.fit(model=model, conf=config, calib_dataloader=calib_dataloader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e545a6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save the quantized model\n",
-    "inc_output_dir = os.path.join(output_dir, model_name, '{}_quantized'.format(experiment_identifier))\n",
-    "quantized_model.save(inc_output_dir)\n",
-    "print(\"Quantized model directory:\", inc_output_dir)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "11f0c4ab",
-   "metadata": {},
-   "source": [
-    "Next we use the Intel Neural Compressor to benchmark the quantized model. These metrics can be compared with\n",
-    "the benchmarking metrics from the full precision model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ecf1bad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from neural_compressor.utils.pytorch import load\n",
-    "\n",
-    "# Load the quantized model using the INC utils method\n",
-    "model_path = os.path.join(inc_output_dir, 'best_model.pt')\n",
-    "quantized_model = load(model_path, model, dataloader=calib_dataloader)\n",
-    "\n",
-    "# Benchmark the quantized model\n",
-    "config = BenchmarkConfig(backend=backend, warmup=50, iteration=500)\n",
-    "results = fit(model=quantized_model, config=config, b_dataloader=calib_dataloader)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c229270d",
-   "metadata": {},
-   "source": [
-    "Lastly, we can inspect the disk size of the pre- and post-quantization model files:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be50e1c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('The size of the un-compressed model:')\n",
-    "!du -h {model_output_dir}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3646cba4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('The size of the compressed model:')\n",
-    "!du -h {inc_output_dir}"
    ]
   },
   {
